--- a/index.html
+++ b/index.html
@@ -71,9 +71,20 @@
       </div>
     </section>
   </main>
-  <!-- <footer class="footer">
+  <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
-  </footer> -->
-
+  </footer>
+  <section class="popup">
+    <div class="popup__container">
+      <button class="popup__close"></button>
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <form action="" class="popup__form">
+        <input type="text" class="popup__input popup__input_type_name">
+        <input type="text" class="popup__input popup__input_type_status">
+        <button class="popup__save" type="submit">Сохранить</button>
+      </form>
+    </div>
+  </section>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
