--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="popup__container">
       <button class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form action="" class="popup__form">
+      <form class="popup__form">
         <input type="text" class="popup__input popup__input_type_name">
         <input type="text" class="popup__input popup__input_type_status">
         <button class="popup__save" type="submit">Сохранить</button>
