--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./images/header-logo.png" alt="логотип" class="header__logo">
+    <img src="./images/logo.svg" alt="логотип" class="header__logo">
   </header>
   <main>
     <section class="user">
@@ -19,54 +19,54 @@
         <div>
           <div class="user__info-container">
             <h1 class="user__name">Жак-Ив Кусто</h1>
-            <button class="user__rename-button"></button>
+            <button type="button" class="user__rename-button"></button>
           </div>
           <p class="user__status">Исследователь океана</p>
         </div>
       </div>
-      <button class="user__add-button"></button>
+      <button type="button" class="user__add-button"></button>
     </section>
     <section class="cards">
       <div class="cards__item">
         <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Карачаевск</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Гора Эльбрус</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Домбай</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Гора Эльбрус</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Домбай</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
       <div class="cards__item">
         <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Карачаево-Черкесия</h2>
-          <button class="cards__like"></button>
+          <button type="button" class="cards__like"></button>
         </div>
       </div>
     </section>
@@ -76,15 +76,15 @@
   </footer>
   <section class="popup">
     <div class="popup__container">
-      <button class="popup__close"></button>
+      <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form">
+      <form class="popup__form" name="rename-form">
         <input type="text" class="popup__input popup__input_type_name">
         <input type="text" class="popup__input popup__input_type_status">
         <button class="popup__save" type="submit">Сохранить</button>
       </form>
     </div>
   </section>
-  <script src="./scripts/index.js"></script>
+  <script defer src="./scripts/index.js"></script>
 </body>
 </html>
