--- a/index.html
+++ b/index.html
@@ -27,54 +27,54 @@
       <button type="button" class="user__add-button"></button>
     </section>
     <section class="cards">
-      <div class="cards__item">
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Карачаевск</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
-      <div class="cards__item">
+      </div> -->
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Гора Эльбрус</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
-      <div class="cards__item">
+      </div> -->
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Домбай</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
-      <div class="cards__item">
+      </div> -->
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Гора Эльбрус</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
-      <div class="cards__item">
+      </div> -->
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Домбай</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
-      <div class="cards__item">
+      </div> -->
+      <!-- <div class="cards__item">
         <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
         <div class="cards__title-container">
           <h2 class="cards__title">Карачаево-Черкесия</h2>
           <button type="button" class="cards__like"></button>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
-  <section class="popup">
+  <section class="popup" id="popup-rename">
     <div class="popup__container">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
@@ -85,6 +85,28 @@
       </form>
     </div>
   </section>
+  <section class="popup" id="popup-add-place">
+    <div class="popup__container popup__container-add-place">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Новое место</h3>
+      <form class="popup__form" name="rename-form">
+        <input type="text" class="popup__input popup__input_type_place-name" placeholder="Название">
+        <input type="text" class="popup__input popup__input_type_image-link" placeholder="Ссылка на картинку">
+        <button class="popup__save" type="submit">Сохранить</button>
+      </form>
+    </div>
+  </section>
+
   <script defer src="./scripts/index.js"></script>
+  <template id="cards-template">
+    <div class="cards__item">
+      <img src="#" alt="#" class="cards__image">
+      <div class="cards__title-container">
+        <h2 class="cards__title"></h2>
+        <button type="button" class="cards__like"></button>
+      </div>
+    </div>
+  </template>
+
 </body>
 </html>
