--- a/index.html
+++ b/index.html
@@ -96,10 +96,20 @@
       </form>
     </div>
   </section>
+  <section id="big-image" class="popup">
+    <div class="popup__big-image-container">
+      <button type="button" class="popup__close"></button>
+      <figure class="popup__big-image-wrap">
+        <img src="#" alt="#" class="popup__big-image">
+        <figcaption class="popup__caption"></figcaption>
+      </figure>
+    </div>
+  </section>
 
   <script defer src="./scripts/index.js"></script>
   <template id="cards-template">
     <div class="cards__item">
+      <button type="button" class="cards__trash"></button>
       <img src="#" alt="#" class="cards__image">
       <div class="cards__title-container">
         <h2 class="cards__title"></h2>
