--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="popup__container popup__container-add-place">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="rename-form">
+      <form class="popup__form" name="add-place-form">
         <input type="text" class="popup__input popup__input_type_place-name" placeholder="Название">
         <input type="text" class="popup__input popup__input_type_image-link" placeholder="Ссылка на картинку">
         <button class="popup__save" type="submit">Сохранить</button>
