new file:   scripts/validate.js

--- a/index.html
+++ b/index.html
@@ -27,48 +27,6 @@
       <button type="button" class="user__add-button"></button>
     </section>
     <section class="cards">
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Карачаевск</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Гора Эльбрус</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Домбай</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="холмистая степь" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Гора Эльбрус</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="горная вершина" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Домбай</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
-      <!-- <div class="cards__item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="развалины в горах" class="cards__image">
-        <div class="cards__title-container">
-          <h2 class="cards__title">Карачаево-Черкесия</h2>
-          <button type="button" class="cards__like"></button>
-        </div>
-      </div> -->
     </section>
   </main>
   <footer class="footer">
@@ -79,8 +37,10 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="rename-form">
-        <input type="text" class="popup__input popup__input_type_name">
-        <input type="text" class="popup__input popup__input_type_status">
+        <input id="user-name" type="text" class="popup__input popup__input_type_name" required name="user-name" minlength="2" maxlength="40">
+        <span class="error" id="user-name-error"></span>
+        <input id="user-status" type="text" class="popup__input popup__input_type_status" required name="user-status" minlength="2" maxlength="200">
+        <span id="user-status-error" class="error"></span>
         <button class="popup__save" type="submit">Сохранить</button>
       </form>
     </div>
@@ -90,8 +50,10 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="add-place-form">
-        <input type="text" class="popup__input popup__input_type_place-name" placeholder="Название">
-        <input type="text" class="popup__input popup__input_type_image-link" placeholder="Ссылка на картинку">
+        <input id="image-name" type="text" class="popup__input popup__input_type_place-name" placeholder="Название" required minlength="2" maxlength="40">
+        <span id="image-name-error" class="error"></span>
+        <input id="image-link" type="url" class="popup__input popup__input_type_image-link" placeholder="Ссылка на картинку" required>
+        <span id="image-link-error" class="error"></span>
         <button class="popup__save" type="submit">Сохранить</button>
       </form>
     </div>
@@ -105,8 +67,8 @@
       </figure>
     </div>
   </section>
-
   <script defer src="./scripts/index.js"></script>
+  <script defer src="./scripts/validate.js"></script>
   <template id="cards-template">
     <div class="cards__item">
       <button type="button" class="cards__trash"></button>
@@ -117,6 +79,5 @@
       </div>
     </div>
   </template>
-
 </body>
 </html>
