modified:   index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </form>
     </div>
   </section>
-  <section id="big-image" class="popup popup__overlay-opacity">
+  <section id="big-image" class="popup page__overlay-opacity">
     <div class="popup__big-image-container">
       <button type="button" class="popup__close"></button>
       <figure class="popup__big-image-wrap">
